[package]
name = "iv_rhash_bot"
version = "0.1.0"
authors = ["Zephyr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
carapax = "0.10"
rustbreak = { version = "2.0", features = ["yaml_enc"] }

dotenv = "0.15"
regex = "1.4"
url = "2.2"
blake2 = "0.9"
log = "0.4"
env_logger = "0.9"
